syntax = "proto3";

package broker_service;

service BrokerService {
    rpc CreateTopic (CreateTopicRequest) returns (CreateTopicResponse);
    rpc Subscribe (SubscribeRequest) returns (SubscribeResponse);
}

message CreateTopicRequest {
    string name = 1;
}

message CreateTopicResponse {
    string message = 1;
}

message SubscribeRequest {
    string topic_name = 1;
    string client_id = 2;
}

message SubscribeResponse {
    string message = 1;
}